# active-learning-classifier

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  STRUCTURE.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DOCKER.md  PROJECT_SUMMARY.md
notebooks/: no_al_benchmark.ipynb
scripts/: benchmark_comparison.py  start.bat  start.sh
src/: __init__.py  active_learning.py  config.py  data_preprocessing.py  model.py  utils.py
tests/: test_basic.py
